@@ -1,3 +1,11 @@
+2008-07-08 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/x11/XGServerWindow.m (-setinputfocus:): For EWMH window
+	managers set the user time before requesting focus.
+	* Source/x11/XGServerWindow.m (-setinputstate:): For EWMH window
+	managers set active window status.
+	Based on patch by Hubert Chathi <hubert@uhoreg.ca>.
+
 2008-06-26 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/cairo/CairoGState.m (-copyWithZone:): Use a runtime
